add new website from server na

--- a/xem-phim-moi/sen-boss-sum-vay/index.html
+++ b/xem-phim-moi/sen-boss-sum-vay/index.html
@@ -1193,7 +1193,7 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
              Lượt xem:
             </dt>
             <dd class="movie-dd">
-             3
+             5
             </dd>
             <br/>
            </dl>
@@ -1772,21 +1772,21 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
        <div class="right-box-content">
         <ul class="list-top-movie" id="list-top-film-week">
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/phu-ta-phan-1" title="Phụ Tá (Phần 1)">
+          <a class="list-top-movie-link" href="/phim-moi/khach-san-cap-toc-phan-2" title="Khách sạn cấp tốc (Phần 2)">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/phu-ta-phan-1-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/khach-san-cap-toc-phan-2-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Phụ Tá (Phần 1)
+             Khách sạn cấp tốc (Phần 2)
             </span>
             <span class="list-top-movie-item-en">
-             Chief of Staff (Season 1)
+             Instant Hotel (Season 2)
             </span>
             <span class="list-top-movie-item-view">
-             1 lượt xem
+             2 lượt xem
             </span>
             <span class="rate-vote rate-vote-0">
             </span>
@@ -1794,18 +1794,18 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/thanh-xuan-khong-so-hai" title="Thanh Xuân Không Sợ Hãi">
+          <a class="list-top-movie-link" href="/phim-moi/truy-lung-cuoc-choi-kinh-hoang" title="Truy Lùng: Cuộc Chơi Kinh Hoàng">
            <span class="status">
             HD Thuyết Minh
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/thanh-xuan-khong-so-hai-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/truy-lung-cuoc-choi-kinh-hoang-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Thanh Xuân Không Sợ Hãi
+             Truy Lùng: Cuộc Chơi Kinh Hoàng
             </span>
             <span class="list-top-movie-item-en">
-             Youngth Days, No Fears
+             Wanted
             </span>
             <span class="list-top-movie-item-view">
              2 lượt xem
@@ -1816,40 +1816,18 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/lac-vao-chon-hoang-da" title="Lạc Vào Chốn Hoang Dã">
+          <a class="list-top-movie-link" href="/phim-moi/cac-quy-co-cua-chung-toi" title="Các Quý Cô Của Chúng Tôi">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/lac-vao-chon-hoang-da-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/cac-quy-co-cua-chung-toi-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Lạc Vào Chốn Hoang Dã
+             Các Quý Cô Của Chúng Tôi
             </span>
             <span class="list-top-movie-item-en">
-             Where The Wild Things Are
-            </span>
-            <span class="list-top-movie-item-view">
-             1 lượt xem
-            </span>
-            <span class="rate-vote rate-vote-0">
-            </span>
-           </div>
-          </a>
-         </li>
-         <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/giang-sinh-dieu-ky-2" title="Giáng Sinh Diệu Kỳ">
-           <span class="status">
-            HD Vietsub
-           </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/giang-sinh-dieu-ky-her-magical-christmas-thumb.jpg')">
-           </div>
-           <div class="list-top-movie-item-info">
-            <span class="list-top-movie-item-vn">
-             Giáng Sinh Diệu Kỳ
-            </span>
-            <span class="list-top-movie-item-en">
-             Her Magical Christmas
+             Our Ladies
             </span>
             <span class="list-top-movie-item-view">
              2 lượt xem
@@ -1860,21 +1838,43 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/cach-co-ay-tim-y-tuong-trong-cong-viec" title="Cách Cô Ấy Tìm Ý Tưởng Trong Công Việc">
+          <a class="list-top-movie-link" href="/phim-moi/lupin-the-3rd-vs-cats-eye" title="Lupin The 3rd vs. Cat’s Eye">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/cach-co-ay-tim-y-tuong-trong-cong-viec-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/lupin-the-3rd-vs-cats-eye-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Cách Cô Ấy Tìm Ý Tưởng Trong Công Việc
+             Lupin The 3rd vs. Cat’s Eye
             </span>
             <span class="list-top-movie-item-en">
-             음란소설
+             Lupin The 3rd vs. Cat’s Eye
             </span>
             <span class="list-top-movie-item-view">
-             3 lượt xem
+             0 lượt xem
+            </span>
+            <span class="rate-vote rate-vote-0">
+            </span>
+           </div>
+          </a>
+         </li>
+         <li class="list-top-movie-item" id="list-top-movie-item-1">
+          <a class="list-top-movie-link" href="/phim-moi/sieu-nhan-2" title="Siêu Nhân 2">
+           <span class="status">
+            HD Vietsub
+           </span>
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/sieu-nhan-2-thumb.jpg')">
+           </div>
+           <div class="list-top-movie-item-info">
+            <span class="list-top-movie-item-vn">
+             Siêu Nhân 2
+            </span>
+            <span class="list-top-movie-item-en">
+             Superman II
+            </span>
+            <span class="list-top-movie-item-view">
+             2 lượt xem
             </span>
             <span class="rate-vote rate-vote-0">
             </span>
