add new website from server na

--- a/xem-phim-moi/ke-trom-mat-trang-4/index.html
+++ b/xem-phim-moi/ke-trom-mat-trang-4/index.html
@@ -1197,7 +1197,7 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
              Lượt xem:
             </dt>
             <dd class="movie-dd">
-             2
+             4
             </dd>
             <br/>
            </dl>
@@ -1787,40 +1787,18 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
        <div class="right-box-content">
         <ul class="list-top-movie" id="list-top-film-week">
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/bac-thay-xe-hoi-tu-dong-nat-den-giau-sang-phan-1" title="Bậc thầy xe hơi: Từ đồng nát đến giàu sang (Phần 1)">
+          <a class="list-top-movie-link" href="/phim-moi/chuyen-tau-sinh-tu" title="Chuyến Tàu Sinh Tử">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/bac-thay-xe-hoi-tu-dong-nat-den-giau-sang-phan-1-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/chuyen-tau-sinh-tu-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Bậc thầy xe hơi: Từ đồng nát đến giàu sang (Phần 1)
+             Chuyến Tàu Sinh Tử
             </span>
             <span class="list-top-movie-item-en">
-             Car Masters: Rust to Riches (Season 1)
-            </span>
-            <span class="list-top-movie-item-view">
-             3 lượt xem
-            </span>
-            <span class="rate-vote rate-vote-0">
-            </span>
-           </div>
-          </a>
-         </li>
-         <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/gia-dinh-hien-dai-phan-3" title="Gia Đình Hiện Đại (Phần 3)">
-           <span class="status">
-            HD Vietsub
-           </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/gia-dinh-hien-dai-phan-3-thumb.jpg')">
-           </div>
-           <div class="list-top-movie-item-info">
-            <span class="list-top-movie-item-vn">
-             Gia Đình Hiện Đại (Phần 3)
-            </span>
-            <span class="list-top-movie-item-en">
-             Modern Family (Season 3)
+             Train To Busan (Busanhaeng)
             </span>
             <span class="list-top-movie-item-view">
              2 lượt xem
@@ -1831,18 +1809,40 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/neu-oc-sen-co-tinh-yeu-ban-thai" title="Nếu Ốc Sên Có Tình Yêu (Bản Thái)">
+          <a class="list-top-movie-link" href="/phim-moi/bounty-hunters" title="Bounty Hunters">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/neu-oc-sen-co-tinh-yeu-ban-thai-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/bounty-hunters-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Nếu Ốc Sên Có Tình Yêu (Bản Thái)
+             Bounty Hunters
             </span>
             <span class="list-top-movie-item-en">
-             When a Snail Falls in Love
+             Bounty Hunters
+            </span>
+            <span class="list-top-movie-item-view">
+             3 lượt xem
+            </span>
+            <span class="rate-vote rate-vote-0">
+            </span>
+           </div>
+          </a>
+         </li>
+         <li class="list-top-movie-item" id="list-top-movie-item-1">
+          <a class="list-top-movie-link" href="/phim-moi/heeramandi" title="Heeramandi">
+           <span class="status">
+            HD Vietsub
+           </span>
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/heeramandi-thumb.jpg')">
+           </div>
+           <div class="list-top-movie-item-info">
+            <span class="list-top-movie-item-vn">
+             Heeramandi
+            </span>
+            <span class="list-top-movie-item-en">
+             Heeramandi: The Diamond Bazaar
             </span>
             <span class="list-top-movie-item-view">
              1 lượt xem
@@ -1853,21 +1853,21 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/luc-phien-mon" title="Lục Phiến Môn">
+          <a class="list-top-movie-link" href="/phim-moi/cuoi-song-dap-gio" title="Cưỡi Sóng Đạp Gió">
            <span class="status">
-            HD Thuyết Minh
+            HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/luc-phien-mon-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/cuoi-song-dap-gio-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Lục Phiến Môn
+             Cưỡi Sóng Đạp Gió
             </span>
             <span class="list-top-movie-item-en">
-             The Legend Liu Shan
+             Duckweed
             </span>
             <span class="list-top-movie-item-view">
-             1 lượt xem
+             2 lượt xem
             </span>
             <span class="rate-vote rate-vote-0">
             </span>
@@ -1875,18 +1875,18 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/lang-nghe-hanh-phuc" title="Lắng Nghe Hạnh Phúc">
+          <a class="list-top-movie-link" href="/phim-moi/song-exploder-cau-chuyen-giai-dieu" title="Song Exploder: Câu chuyện giai điệu">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/lang-nghe-hanh-phuc-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/song-exploder-cau-chuyen-giai-dieu-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Lắng Nghe Hạnh Phúc
+             Song Exploder: Câu chuyện giai điệu
             </span>
             <span class="list-top-movie-item-en">
-             Someone Like You
+             Song Exploder
             </span>
             <span class="list-top-movie-item-view">
              1 lượt xem
