add new website from server na

--- a/xem-phim-moi/ke-trom-mat-trang-3/index.html
+++ b/xem-phim-moi/ke-trom-mat-trang-3/index.html
@@ -1195,7 +1195,7 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
              Lượt xem:
             </dt>
             <dd class="movie-dd">
-             6
+             7
             </dd>
             <br/>
            </dl>
@@ -1665,21 +1665,21 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
        <div class="right-box-content">
         <ul class="list-top-movie" id="list-top-film-week">
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/mua-dong-ruc-lua" title="Mùa Đông Rực Lửa">
+          <a class="list-top-movie-link" href="/phim-moi/ma-ong-kinh" title="Ma Ống Kính">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/mua-dong-ruc-lua-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/ma-ong-kinh-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Mùa Đông Rực Lửa
+             Ma Ống Kính
             </span>
             <span class="list-top-movie-item-en">
-             Winter on Fire: Ukraine's Fight for Freedom
+             Shutter
             </span>
             <span class="list-top-movie-item-view">
-             2 lượt xem
+             3 lượt xem
             </span>
             <span class="rate-vote rate-vote-0">
             </span>
@@ -1687,62 +1687,18 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/loi-chuc-phuc-tu-bac-kinh" title="Lời chúc phúc từ Bắc Kinh">
+          <a class="list-top-movie-link" href="/phim-moi/ke-thoat-than" title="Kẻ Thoát Thân">
            <span class="status">
-            HD Vietsub
+            HD Thuyết Minh
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/loi-chuc-phuc-tu-bac-kinh-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/ke-thoat-than-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Lời chúc phúc từ Bắc Kinh
+             Kẻ Thoát Thân
             </span>
             <span class="list-top-movie-item-en">
-             我来自北京之福从天降
-            </span>
-            <span class="list-top-movie-item-view">
-             2 lượt xem
-            </span>
-            <span class="rate-vote rate-vote-0">
-            </span>
-           </div>
-          </a>
-         </li>
-         <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/show-by-rock-short" title="Show by Rock!! Short!!">
-           <span class="status">
-            HD Vietsub
-           </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/show-by-rock-short-thumb.jpg')">
-           </div>
-           <div class="list-top-movie-item-info">
-            <span class="list-top-movie-item-vn">
-             Show by Rock!! Short!!
-            </span>
-            <span class="list-top-movie-item-en">
-             Show by Rock!! Short!!
-            </span>
-            <span class="list-top-movie-item-view">
-             2 lượt xem
-            </span>
-            <span class="rate-vote rate-vote-0">
-            </span>
-           </div>
-          </a>
-         </li>
-         <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/hoa-no-ve-dem" title="Hoa Nở Về Đêm">
-           <span class="status">
-            HD Vietsub
-           </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/hoa-no-ve-dem-thumb.jpg')">
-           </div>
-           <div class="list-top-movie-item-info">
-            <span class="list-top-movie-item-vn">
-             Hoa Nở Về Đêm
-            </span>
-            <span class="list-top-movie-item-en">
-             Knight Flower
+             Lost in 1949
             </span>
             <span class="list-top-movie-item-view">
              1 lượt xem
@@ -1753,21 +1709,65 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/alice-darling" title="Alice, Darling">
+          <a class="list-top-movie-link" href="/phim-moi/bua-sang-tren-sao-diem-vuong" title="Bua Sáng Trên Sao Diêm Vuong">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/alice-darling-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/bua-sang-tren-sao-diem-vuong-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Alice, Darling
+             Bua Sáng Trên Sao Diêm Vuong
             </span>
             <span class="list-top-movie-item-en">
-             Alice, Darling
+             Breakfast on Pluto
             </span>
             <span class="list-top-movie-item-view">
              2 lượt xem
+            </span>
+            <span class="rate-vote rate-vote-0">
+            </span>
+           </div>
+          </a>
+         </li>
+         <li class="list-top-movie-item" id="list-top-movie-item-1">
+          <a class="list-top-movie-link" href="/phim-moi/dinh-che-hanh-phuc" title="Định Chế Hạnh Phúc">
+           <span class="status">
+            HD Vietsub
+           </span>
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/dinh-che-hanh-phuc-thumb.jpg')">
+           </div>
+           <div class="list-top-movie-item-info">
+            <span class="list-top-movie-item-vn">
+             Định Chế Hạnh Phúc
+            </span>
+            <span class="list-top-movie-item-en">
+             Customize Happiness
+            </span>
+            <span class="list-top-movie-item-view">
+             1 lượt xem
+            </span>
+            <span class="rate-vote rate-vote-0">
+            </span>
+           </div>
+          </a>
+         </li>
+         <li class="list-top-movie-item" id="list-top-movie-item-1">
+          <a class="list-top-movie-link" href="/phim-moi/lupin-the-3rd-vs-cats-eye" title="Lupin The 3rd vs. Cat’s Eye">
+           <span class="status">
+            HD Vietsub
+           </span>
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/lupin-the-3rd-vs-cats-eye-thumb.jpg')">
+           </div>
+           <div class="list-top-movie-item-info">
+            <span class="list-top-movie-item-vn">
+             Lupin The 3rd vs. Cat’s Eye
+            </span>
+            <span class="list-top-movie-item-en">
+             Lupin The 3rd vs. Cat’s Eye
+            </span>
+            <span class="list-top-movie-item-view">
+             0 lượt xem
             </span>
             <span class="rate-vote rate-vote-0">
             </span>
