add new website from server na

--- a/xem-phim-moi/ke-trom-mat-trang-3/index.html
+++ b/xem-phim-moi/ke-trom-mat-trang-3/index.html
@@ -1195,7 +1195,7 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
              Lượt xem:
             </dt>
             <dd class="movie-dd">
-             7
+             8
             </dd>
             <br/>
            </dl>
@@ -1665,62 +1665,18 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
        <div class="right-box-content">
         <ul class="list-top-movie" id="list-top-film-week">
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/ma-ong-kinh" title="Ma Ống Kính">
+          <a class="list-top-movie-link" href="/phim-moi/nguoi-ban-gai-lieu-mang-cua-toi" title="Người bạn gái liều mạng của tôi">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/ma-ong-kinh-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/nguoi-ban-gai-lieu-mang-cua-toi-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Ma Ống Kính
+             Người bạn gái liều mạng của tôi
             </span>
             <span class="list-top-movie-item-en">
-             Shutter
-            </span>
-            <span class="list-top-movie-item-view">
-             3 lượt xem
-            </span>
-            <span class="rate-vote rate-vote-0">
-            </span>
-           </div>
-          </a>
-         </li>
-         <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/ke-thoat-than" title="Kẻ Thoát Thân">
-           <span class="status">
-            HD Thuyết Minh
-           </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/ke-thoat-than-thumb.jpg')">
-           </div>
-           <div class="list-top-movie-item-info">
-            <span class="list-top-movie-item-vn">
-             Kẻ Thoát Thân
-            </span>
-            <span class="list-top-movie-item-en">
-             Lost in 1949
-            </span>
-            <span class="list-top-movie-item-view">
-             1 lượt xem
-            </span>
-            <span class="rate-vote rate-vote-0">
-            </span>
-           </div>
-          </a>
-         </li>
-         <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/bua-sang-tren-sao-diem-vuong" title="Bua Sáng Trên Sao Diêm Vuong">
-           <span class="status">
-            HD Vietsub
-           </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/bua-sang-tren-sao-diem-vuong-thumb.jpg')">
-           </div>
-           <div class="list-top-movie-item-info">
-            <span class="list-top-movie-item-vn">
-             Bua Sáng Trên Sao Diêm Vuong
-            </span>
-            <span class="list-top-movie-item-en">
-             Breakfast on Pluto
+             My Dangerous Girlfriend
             </span>
             <span class="list-top-movie-item-view">
              2 lượt xem
@@ -1731,21 +1687,21 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/dinh-che-hanh-phuc" title="Định Chế Hạnh Phúc">
+          <a class="list-top-movie-link" href="/phim-moi/da-den-luc-2" title="Dã Dên Lúc">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/dinh-che-hanh-phuc-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/da-den-luc-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Định Chế Hạnh Phúc
+             Dã Dên Lúc
             </span>
             <span class="list-top-movie-item-en">
-             Customize Happiness
+             About Time
             </span>
             <span class="list-top-movie-item-view">
-             1 lượt xem
+             2 lượt xem
             </span>
             <span class="rate-vote rate-vote-0">
             </span>
@@ -1753,21 +1709,65 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/lupin-the-3rd-vs-cats-eye" title="Lupin The 3rd vs. Cat’s Eye">
+          <a class="list-top-movie-link" href="/phim-moi/nguyet-ca-hanh" title="Nguyệt Ca Hành">
            <span class="status">
-            HD Vietsub
+            FHD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/lupin-the-3rd-vs-cats-eye-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/nguyet-ca-hanh-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Lupin The 3rd vs. Cat’s Eye
+             Nguyệt Ca Hành
             </span>
             <span class="list-top-movie-item-en">
-             Lupin The 3rd vs. Cat’s Eye
+             Song Of The Moon
             </span>
             <span class="list-top-movie-item-view">
-             0 lượt xem
+             2 lượt xem
+            </span>
+            <span class="rate-vote rate-vote-0">
+            </span>
+           </div>
+          </a>
+         </li>
+         <li class="list-top-movie-item" id="list-top-movie-item-1">
+          <a class="list-top-movie-link" href="/phim-moi/quan-giao-va-tu-tu" title="Quản Giáo và Tử Tù">
+           <span class="status">
+            HD Vietsub
+           </span>
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/quan-giao-va-tu-tu-thumb.jpg')">
+           </div>
+           <div class="list-top-movie-item-info">
+            <span class="list-top-movie-item-vn">
+             Quản Giáo và Tử Tù
+            </span>
+            <span class="list-top-movie-item-en">
+             The Green Mile
+            </span>
+            <span class="list-top-movie-item-view">
+             4 lượt xem
+            </span>
+            <span class="rate-vote rate-vote-0">
+            </span>
+           </div>
+          </a>
+         </li>
+         <li class="list-top-movie-item" id="list-top-movie-item-1">
+          <a class="list-top-movie-link" href="/phim-moi/tan-luong-son-ba-chuc-anh-dai" title="Tân Lương Sơn Bá – Chúc Anh Đài">
+           <span class="status">
+            HD Thuyết Minh
+           </span>
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/tan-luong-son-ba-chuc-anh-dai-thumb.jpg')">
+           </div>
+           <div class="list-top-movie-item-info">
+            <span class="list-top-movie-item-vn">
+             Tân Lương Sơn Bá – Chúc Anh Đài
+            </span>
+            <span class="list-top-movie-item-en">
+             Butterfly Lovers
+            </span>
+            <span class="list-top-movie-item-view">
+             2 lượt xem
             </span>
             <span class="rate-vote rate-vote-0">
             </span>
