add new website from server na

--- a/xem-phim-moi/ke-trom-mat-trang-2/index.html
+++ b/xem-phim-moi/ke-trom-mat-trang-2/index.html
@@ -1187,7 +1187,7 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
              Lượt xem:
             </dt>
             <dd class="movie-dd">
-             9
+             10
             </dd>
             <br/>
            </dl>
@@ -1690,62 +1690,18 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
        <div class="right-box-content">
         <ul class="list-top-movie" id="list-top-film-week">
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/doc-tam-tham-an" title="Độc Tâm Thám Án">
-           <span class="status">
-            Thuyết Minh - HD Thuyết Minh
-           </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/doc-tam-tham-an-thumb.jpg')">
-           </div>
-           <div class="list-top-movie-item-info">
-            <span class="list-top-movie-item-vn">
-             Độc Tâm Thám Án
-            </span>
-            <span class="list-top-movie-item-en">
-             Ask The Conscience
-            </span>
-            <span class="list-top-movie-item-view">
-             2 lượt xem
-            </span>
-            <span class="rate-vote rate-vote-0">
-            </span>
-           </div>
-          </a>
-         </li>
-         <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/farewell-amor" title="Farewell Amor">
+          <a class="list-top-movie-link" href="/phim-moi/tham-tu-lung-danh-conan-truy-lung-to-chuc-ao-den" title="Thám Tử Lừng Danh Conan: Truy Lùng Tổ Chức Áo Đen">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/farewell-amor-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/tham-tu-lung-danh-conan-truy-lung-to-chuc-ao-den-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Farewell Amor
+             Thám Tử Lừng Danh Conan: Truy Lùng Tổ Chức Áo Đen
             </span>
             <span class="list-top-movie-item-en">
-             Farewell Amor
-            </span>
-            <span class="list-top-movie-item-view">
-             3 lượt xem
-            </span>
-            <span class="rate-vote rate-vote-0">
-            </span>
-           </div>
-          </a>
-         </li>
-         <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/chau-phi-huyen-dieu" title="Châu Phi Huyền Diệu">
-           <span class="status">
-            HD Vietsub
-           </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/chau-phi-huyen-dieu-thumb.jpg')">
-           </div>
-           <div class="list-top-movie-item-info">
-            <span class="list-top-movie-item-vn">
-             Châu Phi Huyền Diệu
-            </span>
-            <span class="list-top-movie-item-en">
-             Amazing Africa
+             Detective Conan: The Raven Chaser
             </span>
             <span class="list-top-movie-item-view">
              4 lượt xem
@@ -1756,18 +1712,40 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/bo-gia-hoan-luong-2" title="Bố Già Hoàn Lương 2">
+          <a class="list-top-movie-link" href="/phim-moi/dich-nhan-kiet-thien-nhan-doat-mang" title="Địch Nhân Kiệt: Thiên Nhãn Đoạt Mạng">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/bo-gia-hoan-luong-2-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/dich-nhan-kiet-thien-nhan-doat-mang-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Bố Già Hoàn Lương 2
+             Địch Nhân Kiệt: Thiên Nhãn Đoạt Mạng
             </span>
             <span class="list-top-movie-item-en">
-             Analyze That
+             Detective Dee: Under The Tower
+            </span>
+            <span class="list-top-movie-item-view">
+             2 lượt xem
+            </span>
+            <span class="rate-vote rate-vote-0">
+            </span>
+           </div>
+          </a>
+         </li>
+         <li class="list-top-movie-item" id="list-top-movie-item-1">
+          <a class="list-top-movie-link" href="/phim-moi/pound-of-flesh" title="Pound of Flesh">
+           <span class="status">
+            HD Vietsub
+           </span>
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/pound-of-flesh-thumb.jpg')">
+           </div>
+           <div class="list-top-movie-item-info">
+            <span class="list-top-movie-item-vn">
+             Pound of Flesh
+            </span>
+            <span class="list-top-movie-item-en">
+             Pound of Flesh
             </span>
             <span class="list-top-movie-item-view">
              1 lượt xem
@@ -1778,18 +1756,40 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/truy-tim-sat-nhan-3" title="Truy Tìm Sát Nhân 3">
+          <a class="list-top-movie-link" href="/phim-moi/guong-phong-thuy" title="Gương phong thủy">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/truy-tim-sat-nhan-3-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/guong-phong-thuy-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Truy Tìm Sát Nhân 3
+             Gương phong thủy
             </span>
             <span class="list-top-movie-item-en">
-             Garage Sale Mystery 3
+             Feng Shui
+            </span>
+            <span class="list-top-movie-item-view">
+             2 lượt xem
+            </span>
+            <span class="rate-vote rate-vote-0">
+            </span>
+           </div>
+          </a>
+         </li>
+         <li class="list-top-movie-item" id="list-top-movie-item-1">
+          <a class="list-top-movie-link" href="/phim-moi/luc-luong-dac-biet-moe-girl" title="Lực lượng đặc biệt Moe Girl">
+           <span class="status">
+            HD Vietsub
+           </span>
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/luc-luong-dac-biet-moe-girl-thumb.jpg')">
+           </div>
+           <div class="list-top-movie-item-info">
+            <span class="list-top-movie-item-vn">
+             Lực lượng đặc biệt Moe Girl
+            </span>
+            <span class="list-top-movie-item-en">
+             Comic Girl Squad
             </span>
             <span class="list-top-movie-item-view">
              2 lượt xem
