--- a/xem-phim-moi/ke-trom-mat-trang/index.html
+++ b/xem-phim-moi/ke-trom-mat-trang/index.html
@@ -1187,7 +1187,7 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
              Lượt xem:
             </dt>
             <dd class="movie-dd">
-             2
+             3
             </dd>
             <br/>
            </dl>
@@ -1690,18 +1690,40 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
        <div class="right-box-content">
         <ul class="list-top-movie" id="list-top-film-week">
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/thieu-nu-lang-man" title="Thiếu Nữ Lãng Mạn">
+          <a class="list-top-movie-link" href="/phim-moi/hercai" title="Hercai">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/thieu-nu-lang-man-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/hercai-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Thiếu Nữ Lãng Mạn
+             Hercai
             </span>
             <span class="list-top-movie-item-en">
-             The Romance of Forbidden Girls
+             Hercai
+            </span>
+            <span class="list-top-movie-item-view">
+             0 lượt xem
+            </span>
+            <span class="rate-vote rate-vote-0">
+            </span>
+           </div>
+          </a>
+         </li>
+         <li class="list-top-movie-item" id="list-top-movie-item-1">
+          <a class="list-top-movie-link" href="/phim-moi/ngoi-nha-nao-nhiet-ban-dien-anh" title="Ngôi nhà náo nhiệt – Bản điện ảnh">
+           <span class="status">
+            HD Vietsub
+           </span>
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/ngoi-nha-nao-nhiet-ban-dien-anh-thumb.jpg')">
+           </div>
+           <div class="list-top-movie-item-info">
+            <span class="list-top-movie-item-vn">
+             Ngôi nhà náo nhiệt – Bản điện ảnh
+            </span>
+            <span class="list-top-movie-item-en">
+             The Loud House Movie
             </span>
             <span class="list-top-movie-item-view">
              2 lượt xem
@@ -1712,21 +1734,21 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/nha-bup-be-cua-gabby-phan-10" title="Nhà Búp Bê Của Gabby (Phần 10)">
+          <a class="list-top-movie-link" href="/phim-moi/doi-dac-cong-nhanh-nhen" title="Đội đặc công nhanh nhẹn">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/nha-bup-be-cua-gabby-phan-10-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/doi-dac-cong-nhanh-nhen-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Nhà Búp Bê Của Gabby (Phần 10)
+             Đội đặc công nhanh nhẹn
             </span>
             <span class="list-top-movie-item-en">
-             Gabby's Dollhouse (Season 10)
+             Shining Force
             </span>
             <span class="list-top-movie-item-view">
-             1 lượt xem
+             3 lượt xem
             </span>
             <span class="rate-vote rate-vote-0">
             </span>
@@ -1734,43 +1756,21 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/tuyet-me-cung" title="Tuyết Mê Cung">
-           <span class="status">
-            Vietsub - HD Vietsub
-           </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/tuyet-me-cung-thumb.jpg')">
-           </div>
-           <div class="list-top-movie-item-info">
-            <span class="list-top-movie-item-vn">
-             Tuyết Mê Cung
-            </span>
-            <span class="list-top-movie-item-en">
-             The First Shot
-            </span>
-            <span class="list-top-movie-item-view">
-             8 lượt xem
-            </span>
-            <span class="rate-vote rate-vote-0">
-            </span>
-           </div>
-          </a>
-         </li>
-         <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/blackaf" title="#blackAF">
+          <a class="list-top-movie-link" href="/phim-moi/true-nhung-cau-chuyen-nhiem-mau" title="True: Những câu chuyện nhiệm màu">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/blackaf-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/true-nhung-cau-chuyen-nhiem-mau-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             #blackAF
+             True: Những câu chuyện nhiệm màu
             </span>
             <span class="list-top-movie-item-en">
-             #blackAF
+             True: Terrific Tales
             </span>
             <span class="list-top-movie-item-view">
-             5 lượt xem
+             4 lượt xem
             </span>
             <span class="rate-vote rate-vote-0">
             </span>
@@ -1778,21 +1778,21 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/oc-sen-va-chim-vang-anh" title="Ốc Sên Và Chim Vàng Anh">
+          <a class="list-top-movie-link" href="/phim-moi/can-choi-giua-rung" title="Căn Chòi Giữa Rừng">
            <span class="status">
             HD Thuyết Minh
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/oc-sen-va-chim-vang-anh-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/can-choi-giua-rung-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Ốc Sên Và Chim Vàng Anh
+             Căn Chòi Giữa Rừng
             </span>
             <span class="list-top-movie-item-en">
-             Symphony's Romance
+             The Cabin In The Woods
             </span>
             <span class="list-top-movie-item-view">
-             2 lượt xem
+             3 lượt xem
             </span>
             <span class="rate-vote rate-vote-0">
             </span>
